--- a/package.json
+++ b/package.json
@@ -26,17 +26,22 @@
     "@ionic-native/app-version": "^5.10.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/facebook": "^5.10.0",
+    "@ionic-native/geolocation": "^5.10.0",
     "@ionic-native/google-plus": "^5.10.0",
     "@ionic-native/in-app-browser": "^5.10.0",
+    "@ionic-native/native-geocoder": "^5.10.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "angular4-social-login": "^1.1.1",
     "cordova-browser": "6.0.0",
+    "cordova-ios": "5.0.1",
+    "cordova-plugin-add-swift-support": "2.0.2",
     "cordova-plugin-app-version": "0.1.9",
     "cordova-plugin-facebook4": "5.0.0",
-    "cordova-plugin-googleplus": "^7.0.2",
+    "cordova-plugin-geolocation": "4.0.2",
     "cordova-plugin-inappbrowser": "3.1.0",
+    "cordova-plugin-nativegeocoder": "3.2.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -53,6 +58,8 @@
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.5.1",
     "@ionic/app-scripts": "^3.2.4",
+    "@types/google-maps": "^3.2.1",
+    "@types/googlemaps": "^3.37.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~12.6.6",
@@ -82,7 +89,9 @@
       "cordova-plugin-app-version": {},
       "cordova-plugin-facebook4": {
         "APP_ID": "364152994258660",
-        "APP_NAME": "redcrix"
+        "APP_NAME": "redcrix",
+        "FACEBOOK_HYBRID_APP_EVENTS": "false",
+        "FACEBOOK_ANDROID_SDK_VERSION": "5.0.2"
       },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
@@ -91,13 +100,12 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "68331676966-rtfsc4e4v2llr1pgee0i0o69la1llg6j.apps.googleusercontent.com",
-        "WEB_APPLICATION_CLIENT_ID": "68331676966-rtfsc4e4v2llr1pgee0i0o69la1llg6j.apps.googleusercontent.com"
-      }
+      "cordova-plugin-nativegeocoder": {},
+      "cordova-plugin-geolocation": {}
     },
     "platforms": [
-      "browser"
+      "browser",
+      "ios"
     ]
   }
 }
