--- a/package.json
+++ b/package.json
@@ -24,25 +24,37 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ionic-native/app-version": "^5.10.0",
+    "@ionic-native/camera": "^5.10.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/crop": "^5.10.0",
     "@ionic-native/facebook": "^5.10.0",
+    "@ionic-native/file": "^5.10.0",
+    "@ionic-native/file-transfer": "^5.10.0",
     "@ionic-native/geolocation": "^5.10.0",
     "@ionic-native/google-plus": "^5.10.0",
+    "@ionic-native/image-picker": "^5.10.0",
     "@ionic-native/in-app-browser": "^5.10.0",
     "@ionic-native/native-geocoder": "^5.10.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "angular-particle": "^1.0.4",
     "angular4-social-login": "^1.1.1",
-    "cordova-browser": "6.0.0",
+    "cordova-android": "8.0.0",
     "cordova-ios": "5.0.1",
     "cordova-plugin-add-swift-support": "2.0.2",
     "cordova-plugin-app-version": "0.1.9",
+    "cordova-plugin-camera": "4.1.0",
+    "cordova-plugin-crop": "0.4.0",
     "cordova-plugin-facebook4": "5.0.0",
+    "cordova-plugin-file": "6.0.2",
+    "cordova-plugin-file-transfer": "1.7.1",
     "cordova-plugin-geolocation": "4.0.2",
     "cordova-plugin-inappbrowser": "3.1.0",
     "cordova-plugin-nativegeocoder": "3.2.2",
+    "cordova-plugin-telerik-imagepicker": "2.3.3",
     "core-js": "^2.5.4",
+    "ng2-file-upload": "^1.3.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
@@ -58,6 +70,7 @@
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.5.1",
     "@ionic/app-scripts": "^3.2.4",
+    "@ionic/lab": "^2.0.6",
     "@types/google-maps": "^3.2.1",
     "@types/googlemaps": "^3.37.0",
     "@types/jasmine": "~2.8.8",
@@ -88,10 +101,8 @@
     "plugins": {
       "cordova-plugin-app-version": {},
       "cordova-plugin-facebook4": {
-        "APP_ID": "364152994258660",
-        "APP_NAME": "redcrix",
-        "FACEBOOK_HYBRID_APP_EVENTS": "false",
-        "FACEBOOK_ANDROID_SDK_VERSION": "5.0.2"
+        "APP_ID": "479469605950241",
+        "APP_NAME": "Ubuntu"
       },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
@@ -101,10 +112,16 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-nativegeocoder": {},
-      "cordova-plugin-geolocation": {}
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-crop": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-telerik-imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": " "
+      }
     },
     "platforms": [
-      "browser",
       "ios"
     ]
   }
